--- a/app/views/todos/_todo_form.html.erb
+++ b/app/views/todos/_todo_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.input :name %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
+  <div class="form-actions mt-2">
+    <%= f.button :submit, class: 'btn btn-dark' %>
   </div>
 <% end %>
