--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -2,26 +2,37 @@
 
 <h1>Todos</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
+      <th scope="col">#</th>
+      <th scope="col">Todo Name</th>
+      <th scope="col">N.º of tasks</th>
+      <th scope="col">Created</th>
+      <th scope="col">Actions</th>
     </tr>
   </thead>
-
   <tbody>
-    <% @todos.each do |todo| %>
+    <% @todos.each_with_index do |todo, index| %>
       <tr>
-        <td><%= todo.name %></td>
-        <td><%= link_to 'Show', todo %></td>
-        <td><%= link_to 'Edit', edit_todo_path(todo) %></td>
-        <td><%= link_to 'Destroy', todo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= index += 1 %></td>
+        <td><%= link_to todo.name, todo_path(todo) %></td>
+        <td><%= todo&.tasks.count %></td>
+        <td><%= todo.created_at.strftime("at %I:%M%p") %></td>
+        <td>
+          <%= link_to edit_todo_path(todo) do %>
+        <%= fa_icon "edit" %>
+      <% end %>
+
+      <%= link_to todo, method: :delete, data: { confirm: 'Are you sure?' } do %>
+        <%= fa_icon "trash" %>
+      <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Todo', new_todo_path %>
+<div class="container">
+  <%= render 'todo_form', todo: @todo %>
+</div>
