--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,18 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-light bg-light justify-content-end navbar-dark bg-dark">
+      <% if current_page?('/todos') %>
+        <form action="/todos" class="form-inline d-flex flex-row">
+          <input class="form-control mr-sm-2 mx-2" type="search" placeholder="Search" name="search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0 mx-2" type="submit">Search</button>
+        </form>
+      <% end %>
+    </nav>
     <div class="container">
       <%= yield %>
     </div>
   </body>
 </html>
+
+
